fixed service selector label

--- a/helm/charts/hive/templates/deployment-hs2.yaml
+++ b/helm/charts/hive/templates/deployment-hs2.yaml
@@ -24,6 +24,10 @@ spec:
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
+        app: {{ template "hive.fullname" . }}-server
+        chart: {{ template "hive.chart" . }}
+        release: {{ .Release.Name }}
+        heritage: {{ .Release.Service }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
